# pyMACS

./: .buildinfo  .gitignore  MANIFEST.in  README.md  api.html  genindex.html  hello.py  index.html  installation.html  kidney.html  macsdata.html  modules.html  monochromator.html  objects.inv  py-modindex.html  pyMACS.html  pyMACS.kidney.html  pyMACS.macsdata.html  pyMACS.monochromator.html  pyMACS.sample.html  pyMACS.scripting.html  pyproject.toml  sample.html  scripting.html  search.html  searchindex.js  setup.cfg  virtualMACS.html
.github/workflows/: docs_build.yml  sphinx.yml  (+1 more)
Python/: mcstas_library.py  mcstas_to_MACS_spot.py
Union MACS model/: MACS_monochromator.instr  Phonon_BD_process.comp  aperture_h.comp  generate_MACS_parts.py  mcstas_to_MACS.py
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt  macsdata.rst.txt  monochromator.rst.txt  pyMACS.kidney.rst.txt  pyMACS.sample.rst.txt  pyMACS.scripting.rst.txt  scripting.rst.txt  virtualMACS.rst.txt
_static/: HTO.cif  TiO2.cif
docs/: conf.py  requirements.txt  search.html  virtualMACS.html  virtualMACS.rst
notebooks/: MACS_User_notebook.html  MACS_User_notebook.ipynb  Resolution_ellipsoid_simulation.html  cri3_plotting_example.html  emulate_MACS_data.html  introduction_notebook.html  introduction_notebook.ipynb  pbvopo4_simulation.html  resolution_example.html  sqw4_simulation.html  sqw4_simulation.ipynb  tio2_111.html  tio2_111.ipynb
pyMACS/: VirtualMACS.py  __init__.py  virtualMACS.py
pyMACS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
source/: conf.py  index.rst
(+1538 files in other folders)
