[metadata]
name = pyMACS
version = 0.0.11
author = Tom Halloran
author_email = thallor1@jhu.edu
description = Monte-Carlo simulation of MACS instrument
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thallor1/pyMACS
project_urls =
    Bug Tracker = https://github.com/thallor1/pyMACS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = MACS_virtual_experiment
packages = find:
python_requires = >=3.6

[options.packages.find]
where = MACS_virtual_experiment